// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feature: containers/Auth/SignIn Background: Scenario: Signing in Given storage has empty auth data Given signIn request is expected Given fetchUser request is expected When the component tree is mounted Then I should see the sign-in form in interactive state 1`] = `
.c0 {
  margin-left: auto;
  margin-right: auto;
  max-width: 280px;
  min-height: calc(100vh - 300px);
  width: 100%;
}

.c1 {
  text-align: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 32px;
}

.c3 {
  font-size: 12px;
  line-height: 16px;
  margin-bottom: 12px;
  margin-top: 32px;
  text-align: center;
}

.c3 + .c3 {
  margin-top: 12px;
}

<div
  class="c0"
>
  <h1
    class="c1"
  >
    <span>
      Sign in
    </span>
  </h1>
  <form>
    <component-text-field
      disabled="false"
      fullwidth="true"
      name="username"
      value=""
    >
      <prop-floating-label-text>
        <span>
          Username
        </span>
      </prop-floating-label-text>
    </component-text-field>
    <component-text-field
      disabled="false"
      fullwidth="true"
      name="password"
      type="password"
      value=""
    >
      <prop-floating-label-text>
        <span>
          Password
        </span>
      </prop-floating-label-text>
    </component-text-field>
    <div
      class="c2"
    >
      <component-raised-button
        disabled="false"
        primary="true"
        type="submit"
      >
        <prop-label>
          <span>
            Sign in
          </span>
        </prop-label>
      </component-raised-button>
    </div>
    <p
      class="c3"
    >
      <span>
        Don't have an account? 
        <component-link
          to="/signup"
        >
          <span>
            Sign up
          </span>
        </component-link>
        .
      </span>
    </p>
    <p
      class="c3"
    >
      <span>
        Did you forget your password? 
        <component-link
          to="/reset_password"
        >
          <span>
            Reset it
          </span>
        </component-link>
        .
      </span>
    </p>
  </form>
</div>
`;

exports[`Feature: containers/Auth/SignIn Background: Scenario: Signing in Given storage has empty auth data Given signIn request is expected Given fetchUser request is expected When the component tree is mounted When I submit the form Then I should see the sign-in form in error state 1`] = `
.c0 {
  margin-left: auto;
  margin-right: auto;
  max-width: 280px;
  min-height: calc(100vh - 300px);
  width: 100%;
}

.c1 {
  text-align: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 32px;
}

.c3 {
  font-size: 12px;
  line-height: 16px;
  margin-bottom: 12px;
  margin-top: 32px;
  text-align: center;
}

.c3 + .c3 {
  margin-top: 12px;
}

<div
  class="c0"
>
  <h1
    class="c1"
  >
    <span>
      Sign in
    </span>
  </h1>
  <form>
    <component-text-field
      disabled="false"
      fullwidth="true"
      name="username"
      value=""
    >
      <prop-floating-label-text>
        <span>
          Username
        </span>
      </prop-floating-label-text>
      <prop-error-text>
        <span>
          Enter your username
        </span>
      </prop-error-text>
    </component-text-field>
    <component-text-field
      disabled="false"
      fullwidth="true"
      name="password"
      type="password"
      value=""
    >
      <prop-floating-label-text>
        <span>
          Password
        </span>
      </prop-floating-label-text>
      <prop-error-text>
        <span>
          Enter your password
        </span>
      </prop-error-text>
    </component-text-field>
    <div
      class="c2"
    >
      <component-raised-button
        disabled="true"
        primary="true"
        type="submit"
      >
        <prop-label>
          <span>
            Sign in
          </span>
        </prop-label>
      </component-raised-button>
    </div>
    <p
      class="c3"
    >
      <span>
        Don't have an account? 
        <component-link
          to="/signup"
        >
          <span>
            Sign up
          </span>
        </component-link>
        .
      </span>
    </p>
    <p
      class="c3"
    >
      <span>
        Did you forget your password? 
        <component-link
          to="/reset_password"
        >
          <span>
            Reset it
          </span>
        </component-link>
        .
      </span>
    </p>
  </form>
</div>
`;

exports[`Feature: containers/Auth/SignIn Background: Scenario: Signing in Given storage has empty auth data Given signIn request is expected Given fetchUser request is expected When the component tree is mounted When I submit the form When I enter username into username field When I enter invalid password into password field When I submit the form Then I should see the sign-in form in waiting state 1`] = `
.c0 {
  margin-left: auto;
  margin-right: auto;
  max-width: 280px;
  min-height: calc(100vh - 300px);
  width: 100%;
}

.c1 {
  text-align: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 32px;
}

.c3 {
  font-size: 12px;
  line-height: 16px;
  margin-bottom: 12px;
  margin-top: 32px;
  text-align: center;
}

.c3 + .c3 {
  margin-top: 12px;
}

<div
  class="c0"
>
  <h1
    class="c1"
  >
    <span>
      Sign in
    </span>
  </h1>
  <form>
    <component-text-field
      disabled="true"
      fullwidth="true"
      name="username"
      value="bob"
    >
      <prop-floating-label-text>
        <span>
          Username
        </span>
      </prop-floating-label-text>
    </component-text-field>
    <component-text-field
      disabled="true"
      fullwidth="true"
      name="password"
      type="password"
      value="invalid"
    >
      <prop-floating-label-text>
        <span>
          Password
        </span>
      </prop-floating-label-text>
    </component-text-field>
    <div
      class="c2"
    >
      <component-raised-button
        disabled="true"
        primary="true"
        type="submit"
      >
        <prop-label>
          <span>
            Sign in
          </span>
        </prop-label>
        <prop-children>
          <component-spinner
            style="font-size: 1.5em; opacity: 0.5; position: absolute; right: -1.5em;"
          />
        </prop-children>
      </component-raised-button>
    </div>
    <p
      class="c3"
    >
      <span>
        Don't have an account? 
        <component-link
          to="/signup"
        >
          <span>
            Sign up
          </span>
        </component-link>
        .
      </span>
    </p>
    <p
      class="c3"
    >
      <span>
        Did you forget your password? 
        <component-link
          to="/reset_password"
        >
          <span>
            Reset it
          </span>
        </component-link>
        .
      </span>
    </p>
  </form>
</div>
`;

exports[`Feature: containers/Auth/SignIn Background: Scenario: Signing in Given storage has empty auth data Given signIn request is expected Given fetchUser request is expected When the component tree is mounted When I submit the form When I enter username into username field When I enter invalid password into password field When I submit the form When signIn request fails with 200, error: "Login attempt failed" Then I should see the sign-in form in error state 1`] = `
.c0 {
  margin-left: auto;
  margin-right: auto;
  max-width: 280px;
  min-height: calc(100vh - 300px);
  width: 100%;
}

.c1 {
  text-align: center;
}

.c2 {
  color: #f44336;
  margin-top: 24px;
  text-align: center;
}

.c2 a {
  color: inherit !important;
  text-decoration: underline;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 32px;
}

.c4 {
  font-size: 12px;
  line-height: 16px;
  margin-bottom: 12px;
  margin-top: 32px;
  text-align: center;
}

.c4 + .c4 {
  margin-top: 12px;
}

<div
  class="c0"
>
  <h1
    class="c1"
  >
    <span>
      Sign in
    </span>
  </h1>
  <form>
    <component-text-field
      disabled="false"
      fullwidth="true"
      name="username"
      value="bob"
    >
      <prop-floating-label-text>
        <span>
          Username
        </span>
      </prop-floating-label-text>
    </component-text-field>
    <component-text-field
      disabled="false"
      fullwidth="true"
      name="password"
      type="password"
      value="invalid"
    >
      <prop-floating-label-text>
        <span>
          Password
        </span>
      </prop-floating-label-text>
    </component-text-field>
    <p
      class="c2"
    >
      <span>
        Invalid credentials
      </span>
    </p>
    <div
      class="c3"
    >
      <component-raised-button
        disabled="true"
        primary="true"
        type="submit"
      >
        <prop-label>
          <span>
            Sign in
          </span>
        </prop-label>
      </component-raised-button>
    </div>
    <p
      class="c4"
    >
      <span>
        Don't have an account? 
        <component-link
          to="/signup"
        >
          <span>
            Sign up
          </span>
        </component-link>
        .
      </span>
    </p>
    <p
      class="c4"
    >
      <span>
        Did you forget your password? 
        <component-link
          to="/reset_password"
        >
          <span>
            Reset it
          </span>
        </component-link>
        .
      </span>
    </p>
  </form>
</div>
`;
